# bountygraph

./: .gitignore  .npmrc  .project-status.json  Anchor.toml  CONTRIBUTING.md  Cargo.toml  DEMO.md  DEPLOYMENT.md  LICENSE  README.md  package.json  tsconfig.json
.github/workflows/: ci.yml  deploy.yml  test.yml
api/: .env.example  .eslintrc.cjs  FEATURES.md  UTILS.md  package.json
api/src/: app.ts  index.ts  shims.d.ts  utils.ts
api/tests/: dispute.integration.test.js  dispute.integration.test.ts  integration.test.js  integration.test.ts  utils.test.js  utils.test.ts
docs/: index.html
examples/: quickstart.ts
examples/integration/: README.md  example-client.ts  quickstart.ts
programs/bountygraph/: Cargo.toml
programs/bountygraph/src/: error.rs  lib.rs  state.rs
scripts/solana/: setup-solana-keypair.sh
sdk/: package.json  tsconfig.json
sdk/src/: client.ts  index.ts  pdas.ts  shims.d.ts
src/: lib.rs
tests/: bountygraph.test.js  bountygraph.test.ts  dispute-detailed.test.ts  dispute.test.ts  e2e.test.ts
ui/: next.config.js  package.json  tailwind.config.js  tsconfig.json
ui/src/: program.ts  solana-web3.d.ts
ui/src/components/: DisputeDashboard.tsx
ui/src/idl/: bountygraph.ts
ui/src/pages/: _app.tsx  bounties.tsx  index.tsx
ui/src/styles/: globals.css
ui/src/types/: vendor.d.ts
