[package]
name = "bountygraph"
version = "0.1.0"
description = "BountyGraph on-chain program"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "bountygraph"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
